# nvmlmon

./: CMakeLists.txt
src/: main.cpp  nvmlmon.cpp  nvmlmon.h
test/: gpu_stress.cu
